Fix for bug 212034: Page break before huge table row inconsistent in print, preview, XP, Linux r+sr=roc